<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nazwaPrzychodu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_income_name"
        android:inputType="textPersonName"
         />

            <EditText
                android:id="@+id/incomeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/add_value" />

            <EditText
                android:id="@+id/incomeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                tools:hint="@string/add_data" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_income_button"
                android:onClick="addInButtonOnClickAction"/>

    <Button
        android:id="@+id/canceled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancelButtonOnClickAction"/>
    <!--        </LinearLayout>-->
<!--    </LinearLayout>-->
</LinearLayout>
