<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andairka.wsb.tota.MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/czesio"-->
    <!--        android:text="Guziczek"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"/>-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="117dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="68dp"
        android:text="TextView"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/opis" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="207dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="212dp">

        <Button
            android:id="@+id/add_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_income" />

        <Button
            android:id="@+id/add_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_expense" />

        <Button
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incomes" />

        <Button
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenses" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="443dp">

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/sum_incomes" />

        <EditText
            android:id="@+id/editTextNumberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="76dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="545dp">

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/sum_incomes" />

        <EditText
            android:id="@+id/editTextNumberSigned2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="108dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="622dp">

        <Button
            android:id="@+id/closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>